rename of functions, postmappings and getmappings

--- a/src/main/resources/Templates/Home/CreateEmployee.html
+++ b/src/main/resources/Templates/Home/CreateEmployee.html
@@ -34,7 +34,7 @@
 
 <h1>Tilføj medarbejdere</h1>
 
-<form action="/addEmployee" method="post">
+<form action="/createEmployee" method="post">
 
     <table>
         <tr>
