--- a/src/main/resources/Templates/Home/CreateSession.html
+++ b/src/main/resources/Templates/Home/CreateSession.html
@@ -30,7 +30,7 @@
 
 <h1>Opret session</h1>
 
-<form action="/addSession" method="post">
+<form action="/createSession" method="post">
     <table>
         <tr>
             <td>
