--- a/src/main/resources/Templates/Home/EditProject.html
+++ b/src/main/resources/Templates/Home/EditProject.html
@@ -30,7 +30,7 @@
 
 <h1>Opdater project</h1>
 
-<form action="/updateProject" method="post">
+<form action="/editProject" method="post">
     <table>
         <tr>
             <td>
