--- a/src/main/resources/Templates/Home/EditSession.html
+++ b/src/main/resources/Templates/Home/EditSession.html
@@ -31,7 +31,7 @@
 
 <h1>Opdater session</h1>
 
-<form action="/updateSession" method="post">
+<form action="/editSession" method="post">
 
     <table>
         <tr>
