--- a/src/main/resources/Templates/Home/CreateProject.html
+++ b/src/main/resources/Templates/Home/CreateProject.html
@@ -31,7 +31,7 @@
 
 <h1>Tilføj projekt</h1>
 
-<form action="/addProject" method="post">
+<form action="/createProject" method="post">
 
     <table>
         <tr>
