--- a/src/main/resources/Templates/Home/EditEmployee.html
+++ b/src/main/resources/Templates/Home/EditEmployee.html
@@ -31,7 +31,7 @@
 
 <h1>Opdater medarbejdere</h1>
 
-<form action="/updateEmployee" method="post">
+<form action="/editEmployee" method="post">
     <table>
         <tr>
             <td>
