--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -76,7 +76,7 @@
         </td>
         <td>
 
-            <a>
+            <a th:href="@{'/deleteSession/'+${sessionTime.sessionTimeID}}">
                 <button class="red" id="btn-delete" >
                     <i class="material-icons" style="font-size:25px">delete_forever</i>
                 </button>
