--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -28,81 +28,9 @@
     </header>
 </div>
 
-<h1>Hovedmenu</h1>
-
-</div>
-<!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="https://www.wizkids.co.uk/wp-content/uploads/2017/01/edulifeslider-596x297.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="http://getwallpapers.com/wallpaper/full/1/c/f/287139.jpg" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="https://i.pinimg.com/originals/38/0a/0c/380a0c2c7bc57319a389b17bf4bd7014.jpg" style="width:100%">
-    </div>
-
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
+<div class="mainPicture">
+    <img id="picture" src="/MainPicture.png" alt="MainPicture">
 </div>
 
-<script>
-    var slideIndex = 1;
-    var t;
-
-    showSlides(slideIndex);
-
-    function plusSlides(n) {
-        slideIndex = slideIndex + n;
-        clearTimeout(t);
-        showSlides(slideIndex);
-        console.log(slideIndex);
-    }
-
-    function currentSlide(n) {
-        showSlides(slideIndex = n);
-    }
-
-    function showSlides(n) {
-
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-
-        if (n == undefined) {
-            n = ++slideIndex;
-        }
-
-        if (n > slides.length) {
-            slideIndex = 1
-        }
-        if (n < 1) {
-            slideIndex = slides.length
-        }
-
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-
-        slides[slideIndex - 1].style.display = "block";
-        t = setTimeout(showSlides, 5000);
-    }
-</script>
 </body>
 </html>
