--- a/src/main/resources/Templates/Home/EditProject.html
+++ b/src/main/resources/Templates/Home/EditProject.html
@@ -82,7 +82,7 @@
                 <p>Brugt tid: </p>
             </td>
             <td>
-                <input type="text" name="projectUsedTime" th:value="${project.projectUsedTime}"/>
+                <input type="text" name="projectUsedTime" th:value="${project.projectUsedTime}"readonly/>
             </td>
         </tr>
 
