Moved getLocal Time and date so it uses the service layer according to the rest of the program

--- a/src/main/resources/Templates/Home/CreateProject.html
+++ b/src/main/resources/Templates/Home/CreateProject.html
@@ -45,7 +45,7 @@
 
         <tr>
             <td>
-                <label>Projekt Beskrivelse:</label>
+                <label>Projekt beskrivelse:</label>
             </td>
             <td>
                 <input type="text" name="projectDesc"/>
