--- a/src/main/resources/Templates/Home/EditProject.html
+++ b/src/main/resources/Templates/Home/EditProject.html
@@ -28,13 +28,13 @@
     </header>
 </div>
 
-<h1>Opdater project</h1>
+<h1>Opdater projekt</h1>
 
 <form action="/editProject" method="post">
     <table>
         <tr>
             <td>
-                <p>Project-ID: </p>
+                <p>Projekt-ID: </p>
             </td>
             <td>
                 <input type="text" name="projectID" th:value="${project.projectID}" readonly/>
