--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -2,7 +2,7 @@
 /* ////////////////////////////BODY//////////////////////// */
 /* Header */
 
-.container{
+.container {
     margin-top: 20px;
     margin-right: 10px;
     margin-left: 10px;
@@ -13,31 +13,32 @@
     border-bottom-color: #2F5BB7;
 }
 
-.navbar-header{
+.navbar-header {
     width: auto;
     height: 100px;
 }
 
-.logo{
-     padding-left: 30px;
-     padding-top: 30px;
-     width: 160px;
-     height: 60px;
- }
+.logo {
+    padding-left: 30px;
+    padding-top: 30px;
+    width: 160px;
+    height: 60px;
+}
 
-.mainPicture{
+.mainPicture {
     width: 100%;
 
 }
-#picture{
+
+#picture {
     max-width: 100%;
 }
 
-body{
+body {
     font-family: "Open Sans", Arial, sans-serif;
 }
 
-h1{
+h1 {
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
     padding-bottom: 10px;
@@ -135,14 +136,14 @@ button.red:hover {
 }
 
 button.red:active {
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.2);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
     background: -webkit-linear-gradient(top, #D74736, #AD2719);
     background: -moz-linear-gradient(top, #D74736, #AD2719);
     background: -ms-linear-gradient(top, #D74736, #AD2719);
 }
 
 /* Header buttons */
-button.topButton{
+button.topButton {
     color: black;
     background-color: transparent;
     table-layout: fixed;
@@ -167,14 +168,14 @@ button.topButton:hover {
 
 
 /* ///////////////// TABLES ///////////// */
-table{
+table {
     border-collapse: collapse;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
 }
 
-th{
+th {
     background-color: #4472c4;
     /*height: 40px;*/
     font-size: 16px;
@@ -184,28 +185,23 @@ th{
 
 }
 
-tr{
+tr {
     background-color: white;
     padding-right: 2px;
     padding-left: 2px;
-    border: 1px solid grey;
-;
+    border: 1px solid grey;;
 }
 
-td{
+td {
     border-right: 1px solid grey;
     padding-left: 3px;
     padding-right: 2px;
 
 }
 
-tr:nth-child(even){
+tr:nth-child(even) {
     background-color: #cdd4ea
 }
-
-
-
-
 
 
 /* ///////// Overlay /////////// */
@@ -218,18 +214,18 @@ tr:nth-child(even){
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
     cursor: pointer;
 }
 
-#text{
+#text {
     position: absolute;
     top: 50%;
     left: 50%;
     font-size: 50px;
     color: white;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
