Commented the names of who was responsible for which class

--- a/src/main/resources/Templates/Home/CreateSession.html
+++ b/src/main/resources/Templates/Home/CreateSession.html
@@ -34,7 +34,7 @@
     <table>
         <tr>
             <td>
-                <label>Dato (YYYY-MM-DD): </label>
+                <label>Dato (DD-MM-YYYY): </label>
             </td>
             <td>
                 <input type="text" name="sessionTimeDate" th:value="${localDate}"/>
